# SE-6362-Project

./: .gitignore  Alphabetizer.cpp  Alphabetizer.h  CMakeLists.txt  Circular_Shift.cpp  Circular_Shift.h  Input.cpp  Input.h  Line_Storage.cpp  Line_Storage.h  Master_Control.cpp  Master_Control.h  Output.cpp  Output.h  ReadMe.md  input_test.txt  kwic_implementation.c  kwic_implementation.cpp  main  main.cpp  output.txt  server.cpp
public/: index.html
